--- a/_factory_forms.html
+++ b/_factory_forms.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="">
-        <meta name="author" content="">
+        <meta charset="utf-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+        <meta name="description" content=""/>
+        <meta name="author" content=""/>
         <title>Forms</title>
         <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
         <!-- Custom styles for this template -->
-        <link href="style.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet"/>
     </head>
     <body>
         <section class="pb-5 pt-5" style="position: relative;">
@@ -40,16 +40,12 @@ Fill in your details and one of our wonderful staff will contact you to find out
                                 <button aria-selected="true" data-panel-id="contact-sales" type="button" class="pd-active pd-forms-1-button" id="form1btn1">Sales</button>
                                 <button aria-selected="false" data-panel-id="contact-support" type="button" class="pd-forms-1-button" id="form1btn2">Support</button>
                             </div>
-                            <div aria-labelledby="contact-sales" aria-hidden="false" class="pd-active pd-forms-1-contact-panel" id="contact-sales" style="opacity: 1;">
-                                <a href="mailto:hi@scissorsapp.com" name="anchor"><span><img src="images/design-assets/icon-email-primary.svg" alt="icon for email" width="32" height="32" class="me-2"></span>hi@scissorsapp.com</a>
-                                <a href="tel:+64 22 620 2412" name="anchor"><span><img src="images/design-assets/icon-phone-primary.svg" alt="icon for email" width="32" height="32" class="me-2"></span>+64 22 620 2412</a>
+                            <div aria-labelledby="contact-sales" aria-hidden="false" class="pd-active pd-forms-1-contact-panel" id="contact-sales" style="opacity: 1;"><a href="mailto:hi@scissorsapp.com" name="anchor"><span><img src="images/design-assets/icon-email-primary.svg" alt="icon for email" width="32" height="32" class="me-2"/></span>hi@scissorsapp.com</a><a href="tel:+64 22 620 2412" name="anchor"><span><img src="images/design-assets/icon-phone-primary.svg" alt="icon for email" width="32" height="32" class="me-2"/></span>+64 22 620 2412</a>
                                 <div class="pd-forms-1-contact-panel-para">
                                     <p>Speak with <strong>Lester Selvey </strong>our Business Development Manager</p>
                                 </div>
                             </div>
-                            <div aria-hidden="true" aria-labelledby="contact-support" class="pd-forms-1-contact-panel" id="contact-support">
-                                <a href="mailto:hi@scissorsapp.com" name="anchor"><span><img src="images/design-assets/icon-email-primary.svg" alt="icon for email" width="32" height="32" class="me-2"></span>support@scissorsapp.com</a>
-                                <a href="tel:+64 800 548 284" name="anchor"><span><img src="images/design-assets/icon-phone-primary.svg" alt="icon for email" width="32" height="32" class="me-2"></span>+64 800 548 284</a>
+                            <div aria-hidden="true" aria-labelledby="contact-support" class="pd-forms-1-contact-panel" id="contact-support"><a href="mailto:hi@scissorsapp.com" name="anchor"><span><img src="images/design-assets/icon-email-primary.svg" alt="icon for email" width="32" height="32" class="me-2"/></span>support@scissorsapp.com</a><a href="tel:+64 800 548 284" name="anchor"><span><img src="images/design-assets/icon-phone-primary.svg" alt="icon for email" width="32" height="32" class="me-2"/></span>+64 800 548 284</a>
                                 <div class="pd-forms-1-contact-panel-para">
                                     <p>Our support desk is open <strong>Monday to Friday 0800hrs to 1700hrs</strong>.</p>
                                 </div>
@@ -61,29 +57,28 @@ Fill in your details and one of our wonderful staff will contact you to find out
                             <form role="form"> 
                                 <div class="mb-3"> 
                                     <label for="firstName">First Name</label>                                     
-                                    <input type="text" class="form-control" id="firstName" placeholder="Enter your first name"> 
+                                    <input type="text" class="form-control" id="firstName" placeholder="Enter your first name"/> 
                                 </div>
                                 <div class="mb-3"> 
                                     <label for="lastName">Last Name</label>                                     
-                                    <input type="text" class="form-control" id="lastName" placeholder="Enter your last name"> 
+                                    <input type="text" class="form-control" id="lastName" placeholder="Enter your last name"/> 
                                 </div>
                                 <div class="mb-3"> 
                                     <label for="email">Email address</label>                                     
-                                    <input type="email" class="form-control" id="email" placeholder="Enter your email"> 
+                                    <input type="email" class="form-control" id="email" placeholder="Enter your email"/> 
                                 </div>
                                 <div class="mb-3"> 
                                     <label for="telephone">Telephone</label>                                     
-                                    <input type="tel" class="form-control" id="telephone" placeholder="Enter your Telephone"> 
+                                    <input type="tel" class="form-control" id="telephone" placeholder="Enter your Telephone"/> 
                                 </div>
                                 <div class="mb-3"> 
                                     <label for="message" class="form-label">Questions and Feedback?</label>                                     
                                     <textarea class="form-control" id="message" rows="5"></textarea> 
                                 </div>                                 
-                                <button type="submit" class="btn btn-info ">
-                                    <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                <button type="submit" class="btn btn-info "><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                 </button>                                 
                             </form>
-                        </div>                                                  
+                        </div>                         
                     </div>
                 </div>
             </div>
@@ -91,6 +86,81 @@ Fill in your details and one of our wonderful staff will contact you to find out
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-forms-2</p>
+            </div>
+        </section>
+        <section class="bg-light pb-5 pd-forms-2 pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 pb-5 pb-lg-0">
+                        <h2>Get in touch...</h2> 
+                        <p class="pd-forms-2-para">We&rsquo;re currently working on lots of projects - please call us as early as possible to discuss and book in your project. We look forward to hearing from you.</p>
+                        <form role="form" class="row">
+                            <div class="col-lg-6">
+                                <div class="mb-3">
+                                    <label for="fullName" class="form-label">Full Name</label>
+                                    <input type="text" class="form-control" id="fullName" placeholder="Full name"/>
+                                </div>                                                                  
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="mb-3">
+                                    <label for="email" class="form-label">Email</label>
+                                    <input type="email" class="form-control" id="email" placeholder="Email"/>
+                                </div>                                                                  
+                            </div>
+                            <div class="col-lg-12">
+                                <div class="mb-3">
+                                    <label for="subject" class="form-label">Your subject</label>
+                                    <input type="text" class="form-control" id="subject" placeholder="Email subject"/>
+                                </div>                                                                  
+                            </div>
+                            <div class="col-lg-12">
+                                <div class="mb-3">
+                                    <label for="message" class="form-label">Your message</label>
+                                    <textarea class="form-control" id="message" rows="5"></textarea>
+                                </div>
+                                <input type="submit" value="Submit" class="pd-forms-2-submit"/>                                  
+                            </div>                                                                                                                                                                              
+                        </form>                         
+                    </div>
+                    <div class="col-lg-6">
+                        <h2>Address</h2>
+                        <div class="row">
+                            <div class="col-lg-6 pb-5 pb-lg-0">
+                                <p class="pd-forms-2-label">Registered Office</p> 
+                                <div class="pd-forms-2-address">
+                                    <p><strong>Pendigital Limited</strong></p>
+                                    <p>Waterside Court, Falmouth Road</p>
+                                    <p>Penryn</p>
+                                    <p>Cornwall, TR10 8AW</p>
+                                    <p>United Kingdom</p>
+                                </div>
+                                <p class="pd-forms-2-label pt-4">Registered in England and Wales</p>
+                                <div class="pd-forms-2-address">
+                                    <p>No:&nbsp;12335082</p>
+                                </div>                                 
+                            </div>
+                            <div class="col-lg-6">
+                                <p class="pd-forms-2-label">Office</p> 
+                                <div class="pd-forms-2-address">
+                                    <p><strong>Pendigital Limited</strong></p>
+                                    <p>Seaview Trenoweth Road</p>
+                                    <p>Falmouth</p>
+                                    <p>Cornwall, TR11 5GH</p>
+                                    <p>United Kingdom</p>
+                                </div>
+                                <p class="pd-forms-2-label pt-4">Phone:&nbsp;</p>
+                                <div class="pd-forms-2-address">
+                                    <a href="tel:07976361908">07976 361908</a>
+                                </div>                                 
+                            </div>
+                        </div>                                                  
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-forms-3</p>
             </div>
         </section>
         <!-- Bootstrap core JavaScript
