--- a/_factory_testimonial_sliders.html
+++ b/_factory_testimonial_sliders.html
@@ -591,6 +591,122 @@
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-testimonial-slider-7</p>
             </div>
         </section>
+        <section class="pd-testimonial-slider-7">
+            <div class="pd-right pd-testimonial-slider-7-mask">
+                <div class="pd-testimonial-slider-7-circle-outer">
+                    <div class="pd-testimonial-slider-7-circle-inner">
+                        <svg class="pd-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368">
+                            <path d="M468.08-162.31q7.84 0 16.07-3.54 8.23-3.53 13.31-8.61l311.85-311.85q15.07-15.07 23.27-30.84 8.19-15.77 8.19-34.62 0-19.08-8.19-37.04-8.2-17.96-23.27-32.81l-150-150q-14.85-15.07-30.5-22.11-15.66-7.04-34.73-7.04-18.85 0-35 7.04-16.16 7.04-30.46 22.11l-34.85 34.85 74 74.23q11.92 11.69 17.77 26.62 5.84 14.92 5.84 30.3 0 31.24-20.42 51.66-20.42 20.42-51.65 20.42-15.39 0-30.04-4.69-14.65-4.69-26.35-16.39l-76.54-76.3-172.69 172.69q-6.07 6.08-9.11 13.81-3.04 7.73-3.04 15.57 0 14.16 9.08 23.35 9.07 9.19 23.23 9.19 7.84 0 16.07-3.54 8.23-3.53 13.31-8.61L390-535.23l28.31 28.31-126.54 126.77q-6.08 6.07-9.12 13.8-3.03 7.73-3.03 15.58 0 13.39 9.46 22.85t22.84 9.46q7.85 0 16.08-3.54 8.23-3.54 13.31-8.62l136-135.76 28.31 28.3-135.77 136q-5.31 5.08-8.73 13.31-3.43 8.23-3.43 16.08 0 13.38 9.46 22.84 9.47 9.47 22.85 9.47 7.85 0 15.58-3.04t13.8-9.12l136-135.77L583.69-360l-136 136q-6.07 6.08-9.11 14.58-3.04 8.5-3.04 15.57 0 14.16 9.96 22.85 9.96 8.69 22.58 8.69Zm-.23 40q-30.85 0-52.81-22.57-21.96-22.58-19.27-55.74-34 .39-56.62-20.3-22.61-20.7-21.46-57.77-37.07.38-58.42-21.19-21.35-21.58-19.42-56.89-33.39.39-55.85-18.77-22.46-19.15-22.46-53.31 0-15.38 5.96-30.8 5.96-15.43 17.65-27.12l201.23-201 103.31 103.31q5.08 5.31 12.54 8.73 7.46 3.42 16.85 3.42 12.84 0 22.69-8.96 9.85-8.96 9.85-23.35 0-9.38-3.43-16.84-3.42-7.46-8.73-12.54L401.85-771.62q-14.85-15.07-30.89-22.11-16.04-7.04-35.11-7.04-18.85 0-34.23 7.04-15.39 7.04-30.47 22.11l-121.77 122q-12.84 12.85-20.76 30.62-7.93 17.77-8.39 36.69-.46 13.54 2.31 26.04t8.77 23.5L101-502.46q-10.08-16.08-15.77-37.04-5.69-20.96-5.23-42.81.46-27.23 10.92-52.19 10.46-24.96 29.93-44.42l121-121q20.92-20.7 44.27-30.77 23.34-10.08 50.5-10.08 27.15 0 50.11 10.08 22.96 10.07 43.65 30.77l34.85 34.84 34.85-34.84q20.92-20.7 43.88-30.77 22.96-10.08 50.12-10.08 27.15 0 50.5 10.08 23.34 10.07 44.04 30.77l149 149q20.69 20.69 31.92 46.46t11.23 52.92q0 27.16-11.23 50.12-11.23 22.96-31.92 43.65L525.77-146.15q-12.46 12.46-27.12 18.15-14.65 5.69-30.8 5.69ZM339.62-626.92Z"/>
+                        </svg>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <header>
+                            <h2 class="pd-intro-heading-sm">CPA Reviews</h2>
+                            <p class="pd-headline">Reviews of Ruzicka CPA</p>
+                        </header>                         
+                        <div class="mb-3 pd-border-left pd-subHeadline">
+                            <p>Mauris fringilla gravida nisl, a laoreet turpis convallis quis. Ut placerat mi in quam vehicula, sit amet accumsan leo varius.</p>
+                        </div>
+                        <footer class=""><a href="#" name="anchor" class="pd-btn pd-inverted"><span class="me-2"><svg class="pd-icon" xmlns="http://www.w3.org/2000/svg" height="18" viewBox="0 -960 960 960" width="24px" fill="#5f6368">
+                                        <path d="M460-140v-315.92q-56.31 0-107.62-21.04-51.3-21.04-90.92-60.66-39.61-39.61-60.15-91.38-20.54-51.77-20.54-107.92v-40h40q55.07 0 106.63 21.49 51.57 21.49 90.91 60.97 31.77 31.77 51.5 72.23 19.73 40.46 26.11 85.54 8.85-17 19.85-31.96 11-14.97 24.92-28.89 39.51-39.47 91.32-60.97Q683.81-680 740-680h40v40q0 56.22-21.52 108.04-21.51 51.83-61.04 91.36-39.52 39.52-90.32 60.06Q556.31-360 500-360v220h-40Zm.77-356.92q0-48-18.5-91.5t-52.5-77.5q-34-34-77.5-52.5t-91.5-18.5q0 48 18 92t52 78q34 34 78 52t92 18ZM500-400q48 0 91.5-18t77.5-52q34-34 52.5-78t18.5-92q-48 0-92 18.5T570-569q-34 34-52 77.5T500-400Zm0 0Zm-39.23-96.92Z"/>
+                                    </svg></span>Get Started</a>
+                        </footer>                         
+                    </div>
+                    <div class="col-lg-6 pt-5 pt-lg-0">
+                        <div class="glide" data-glide='
+                        {
+                            "type": "carousel", 
+                            "startAt": 0, 
+                            "perView": 1,
+                            "autoplay": 4000
+                        }'>
+                            <div class="pd-testimonial-slider-7-controls-outer" class="glide__arrows" data-glide-el="controls">
+                                <button class="glide__arrow glide__arrow--left" aria-label="button to go backwards" data-glide-dir="<">
+                                    <svg class="pd-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368">
+                                        <path d="M396.15-267.69 183.85-480l212.3-212.31 28.31 28.77L260.92-500h515.23v40H260.92l163.54 163.54-28.31 28.77Z"/>
+                                    </svg>
+                                </button>
+                                <button class="ms-2 glide__arrow glide__arrow--right" aria-label="button to go forward" data-glide-dir=">">
+                                    <svg class="pd-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368">
+                                        <path d="m547.69-267.69-28.31-28.77L682.92-460H200v-40h482.92L519.38-663.54l28.31-28.77L760-480 547.69-267.69Z"/>
+                                    </svg>
+                                </button>
+                            </div>
+                            <div class="glide__track" data-glide-el="track">
+                                <ul class="glide__slides">
+                                    <li class="glide__slide">
+                                        <article class="mt-3 pb-3 pd-testimonial-slider-7-card-outer">
+                                            <header class="p-4">
+                                                <div class="me-3 pd-testimonial-slider-7-card-img-outer">
+                                                    <picture>
+                                                        <source srcset="/images/uploads/testimonial-woman-2.jpg" type="image/webp">
+                                                        <img src="/images/uploads/testimonial-woman-2.webp" alt="image of centralia" loading="lazy" class="pd-cards-posts-1-image">
+                                                    </picture>
+                                                </div>
+                                                <div class="pd-testimonial-slider-7-card-author">
+                                                    <h3>Julia Reynolds</h3>
+                                                    <p>Director, Reynolds Industries PLLC</p>
+                                                </div>
+                                            </header>
+                                            <div class=" pd-testimonial-slider-7-card-body pe-4 ps-4">
+                                                <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Proin ullamcorper eros quam, a tincidunt ipsum tempus quis.&nbsp;Mauris nisl lectus, condimentum rhoncus interdum ut, placerat ac enim. Nullam vel consequat neque, et mollis ipsum. Vestibulum non luctus magna.</p>
+                                            </div>
+                                        </article>
+                                    </li>
+                                    <li class="glide__slide">
+                                        <article class="mt-3 pb-3 pd-testimonial-slider-7-card-outer">
+                                            <header class="p-4">
+                                                <div class="me-3 pd-testimonial-slider-7-card-img-outer">
+                                                    <picture>
+                                                        <source srcset="/images/uploads/testimonial-man-2.webp" type="image/webp">
+                                                        <img src="/images/uploads/testimonial-man-2.jpg" alt="image of testimonial man" loading="lazy" class="pd-cards-posts-1-image">
+                                                    </picture>
+                                                </div>
+                                                <div class="pd-testimonial-slider-7-card-author">
+                                                    <h3>Jamie Adams</h3>
+                                                    <p>Partner, Dynamic Data PLLC</p>
+                                                </div>
+                                            </header>
+                                            <div class=" pd-testimonial-slider-7-card-body pe-4 ps-4">
+                                                <p>Phasellus eget ultrices velit. Pellentesque sodales ex elit, sit amet rutrum erat commodo eget. Praesent ornare mollis arcu, sed commodo turpis congue vitae. Proin mauris tellus, convallis nec nibh sed, maximus sollicitudin libero.</p>
+                                            </div>
+                                        </article>
+                                    </li>
+                                    <li class="glide__slide">
+                                        <article class="mt-3 pb-3 pd-testimonial-slider-7-card-outer">
+                                            <header class="p-4">
+                                                <div class="me-3 pd-testimonial-slider-7-card-img-outer">
+                                                    <picture>
+                                                        <source srcset="/images/uploads/testimonial-man-3.webp">
+                                                        <img src="/images/uploads/testimonial-man-3.jpg" alt="image of testimonial man" loading="lazy" class="pd-cards-posts-1-image">
+                                                    </picture>
+                                                </div>
+                                                <div class="pd-testimonial-slider-7-card-author">
+                                                    <h3>Duncan Prior</h3>
+                                                    <p>Head of Accounts, Wellford Pharmaceuticals</p>
+                                                </div>
+                                            </header>
+                                            <div class=" pd-testimonial-slider-7-card-body pe-4 ps-4">
+                                                <p>Sed quis dolor in felis placerat ullamcorper. Vivamus consectetur ex tellus, ut feugiat elit elementum vel. Quisque laoreet et metus et tempus. Proin leo nulla, consequat sit amet fermentum ut, vulputate sed dolor. Vivamus ut leo nec justo feugiat tincidunt.</p>
+                                            </div>
+                                        </article>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>                         
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-testimonial-slider-8</p>
+            </div>
+        </section>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
