--- a/_factory_forms.html
+++ b/_factory_forms.html
@@ -40,16 +40,12 @@ Fill in your details and one of our wonderful staff will contact you to find out
                                 <button aria-selected="true" data-panel-id="contact-sales" type="button" class="pd-active pd-forms-1-button" id="form1btn1">Sales</button>
                                 <button aria-selected="false" data-panel-id="contact-support" type="button" class="pd-forms-1-button" id="form1btn2">Support</button>
                             </div>
-                            <div aria-labelledby="contact-sales" aria-hidden="false" class="pd-active pd-forms-1-contact-panel" id="contact-sales" style="opacity: 1;">
-                                <a href="mailto:hi@scissorsapp.com" name="anchor"><span><img src="images/design-assets/icon-email-primary.svg" alt="icon for email" width="32" height="32" class="me-2"/></span>hi@scissorsapp.com</a>
-                                <a href="tel:+64 22 620 2412" name="anchor"><span><img src="images/design-assets/icon-phone-primary.svg" alt="icon for email" width="32" height="32" class="me-2"/></span>+64 22 620 2412</a>
+                            <div aria-labelledby="contact-sales" aria-hidden="false" class="pd-active pd-forms-1-contact-panel" id="contact-sales" style="opacity: 1;"><a href="mailto:hi@scissorsapp.com" name="anchor"><span><img src="images/design-assets/icon-email-primary.svg" alt="icon for email" width="32" height="32" class="me-2"/></span>hi@scissorsapp.com</a><a href="tel:+64 22 620 2412" name="anchor"><span><img src="images/design-assets/icon-phone-primary.svg" alt="icon for email" width="32" height="32" class="me-2"/></span>+64 22 620 2412</a>
                                 <div class="pd-forms-1-contact-panel-para">
                                     <p>Speak with <strong>Lester Selvey </strong>our Business Development Manager</p>
                                 </div>
                             </div>
-                            <div aria-hidden="true" aria-labelledby="contact-support" class="pd-forms-1-contact-panel" id="contact-support">
-                                <a href="mailto:hi@scissorsapp.com" name="anchor"><span><img src="images/design-assets/icon-email-primary.svg" alt="icon for email" width="32" height="32" class="me-2"/></span>support@scissorsapp.com</a>
-                                <a href="tel:+64 800 548 284" name="anchor"><span><img src="images/design-assets/icon-phone-primary.svg" alt="icon for email" width="32" height="32" class="me-2"/></span>+64 800 548 284</a>
+                            <div aria-hidden="true" aria-labelledby="contact-support" class="pd-forms-1-contact-panel" id="contact-support"><a href="mailto:hi@scissorsapp.com" name="anchor"><span><img src="images/design-assets/icon-email-primary.svg" alt="icon for email" width="32" height="32" class="me-2"/></span>support@scissorsapp.com</a><a href="tel:+64 800 548 284" name="anchor"><span><img src="images/design-assets/icon-phone-primary.svg" alt="icon for email" width="32" height="32" class="me-2"/></span>+64 800 548 284</a>
                                 <div class="pd-forms-1-contact-panel-para">
                                     <p>Our support desk is open <strong>Monday to Friday 0800hrs to 1700hrs</strong>.</p>
                                 </div>
@@ -79,8 +75,7 @@ Fill in your details and one of our wonderful staff will contact you to find out
                                     <label for="message" class="form-label">Questions and Feedback?</label>                                     
                                     <textarea class="form-control" id="message" rows="5"></textarea> 
                                 </div>                                 
-                                <button type="submit" class="btn btn-info ">
-                                    <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                <button type="submit" class="btn btn-info "><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                 </button>                                 
                             </form>
                         </div>                         
@@ -156,7 +151,8 @@ Fill in your details and one of our wonderful staff will contact you to find out
                                     <p>United Kingdom</p>
                                 </div>
                                 <p class="pd-forms-2-label pt-4">Phone:&nbsp;</p>
-                                <div class="pd-forms-2-address"><a href="tel:+447976361908">07976 361908</a>
+                                <div class="pd-forms-2-address">
+                                    <a href="tel:+447976361908">07976 361908</a>
                                 </div>                                 
                             </div>
                         </div>                         
@@ -167,6 +163,94 @@ Fill in your details and one of our wonderful staff will contact you to find out
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-forms-3</p>
+            </div>
+        </section>
+        <section class="pd-forms-3">
+            <div class="pd-forms-3-mask">
+                <div class="pd-forms-3-circle-outer">
+                    <div class="pd-forms-3-circle-inner">
+                        <svg class="pd-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368">
+                            <path d="M260-420h440v-40H260v40Zm0-120h440v-40H260v40Zm0-120h440v-40H260v40Zm580 503.08L716.92-280h-532.3q-27.62 0-46.12-18.5Q120-317 120-344.62v-430.76q0-27.62 18.5-46.12Q157-840 184.62-840h590.76q27.62 0 46.12 18.5Q840-803 840-775.38v618.46ZM184.62-320H734l66 65.77v-521.15q0-9.24-7.69-16.93-7.69-7.69-16.93-7.69H184.62q-9.24 0-16.93 7.69-7.69 7.69-7.69 16.93v430.76q0 9.24 7.69 16.93 7.69 7.69 16.93 7.69ZM160-320v-480 480Z"/>
+                        </svg>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 pb-5">
+                        <header>
+                            <h2 class="pd-intro-heading-sm">Contact</h2>
+                            <p class="pd-headline">Get in Touch</p>
+                        </header>                         
+                        <div class="pb-4 pd-subHeadline">
+                            <p>Sed tincidunt mattis elit vel vestibulum. Proin sit amet lorem mattis elit scelerisque sagittis. Etiam aliquam leo nec vestibulum condimentum.</p>
+                        </div>
+                        <address><div class="pd-forms-3-card-outer">
+                                <div class="pd-forms-3-icon-outer"><a href="tel:+13605295830" name="anchor"><svg class="pd-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368">
+                                            <path d="M304.62-80Q277-80 258.5-98.5 240-117 240-144.62v-670.76q0-27.62 18.5-46.12Q277-880 304.62-880h350.76q27.62 0 46.12 18.5Q720-843 720-815.38v670.76q0 27.62-18.5 46.12Q683-80 655.38-80H304.62ZM280-180v35.38q0 9.24 7.69 16.93 7.69 7.69 16.93 7.69h350.76q9.24 0 16.93-7.69 7.69-7.69 7.69-16.93V-180H280Zm0-40h400v-520H280v520Zm0-560h400v-35.38q0-9.24-7.69-16.93-7.69-7.69-16.93-7.69H304.62q-9.24 0-16.93 7.69-7.69 7.69-7.69 16.93V-780Zm0 0v-60 60Zm0 600v60-60Z"/>
+                                        </svg></a>
+                                </div>
+                                <a href="tel:+13605295830" class="pd-forms-3-card-body">(360) 529-5830</a>
+                            </div><div class="pd-forms-3-card-outer">
+                                <div class="pd-forms-3-icon-outer">
+                                    <svg class="pd-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368">
+                                        <path d="M480.14-490.77q26.71 0 45.59-19.02 18.89-19.02 18.89-45.73 0-26.71-19.03-45.6Q506.57-620 479.86-620q-26.71 0-45.59 19.02-18.89 19.02-18.89 45.73 0 26.71 19.03 45.6 19.02 18.88 45.73 18.88ZM480-172.92q112.77-98.16 178.31-199.66t65.54-175.57q0-109.77-69.5-181.2-69.5-71.42-174.35-71.42t-174.35 71.42q-69.5 71.43-69.5 181.2 0 74.07 65.54 175.57T480-172.92Zm0 53.69Q339-243.92 267.58-351.81q-71.43-107.88-71.43-196.34 0-126.93 82.66-209.39Q361.46-840 480-840q118.54 0 201.19 82.46 82.66 82.46 82.66 209.39 0 88.46-71.43 196.34Q621-243.92 480-119.23Zm0-436.15Z"/>
+                                    </svg>
+                                </div>
+                                <div class="pd-forms-3-card-body">
+                                    <p>400 Union Ave SE<br>Suite 200<br>Olympia<br>WA 98501</p>
+                                </div>
+                            </div><div class="pd-forms-3-card-outer">
+                                <div class="pd-forms-3-icon-outer"><a href="tel:+13605295830" name="anchor"><svg class="pd-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368">
+                                            <path d="M184.62-200q-27.62 0-46.12-18.5Q120-237 120-264.62v-430.76q0-27.62 18.5-46.12Q157-760 184.62-760h590.76q27.62 0 46.12 18.5Q840-723 840-695.38v430.76q0 27.62-18.5 46.12Q803-200 775.38-200H184.62ZM480-475.38 160-684.62v420q0 10.77 6.92 17.7 6.93 6.92 17.7 6.92h590.76q10.77 0 17.7-6.92 6.92-6.93 6.92-17.7v-420L480-475.38Zm0-44.62 307.69-200H172.31L480-520ZM160-684.62V-720v455.38q0 10.77 6.92 17.7 6.93 6.92 17.7 6.92H160v-444.62Z"/>
+                                        </svg></a>
+                                </div>
+                                <a href="mailto:info@ruzicka.cpa" class="pd-forms-3-card-body">info@ruzicka.cpa</a>
+                            </div></address> 
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="pd-forms-3-form-outer">
+                            <form role="form">
+                                <header>
+                                    <p>Please complete all fields marked *</p>
+                                </header>                                 
+                                <div class="mb-4"> 
+                                    <label for="firstName">First Name *</label>                                     
+                                    <input type="text" class="form-control" id="firstName" placeholder="Enter your first name" required/> 
+                                </div>
+                                <div class="mb-4"> 
+                                    <label for="lastName">Last Name *</label>                                     
+                                    <input type="text" class="form-control" id="lastName" placeholder="Enter your last name" required/> 
+                                </div>
+                                <div class="mb-4"> 
+                                    <label for="company">Company</label>                                     
+                                    <input type="text" class="form-control" id="company" placeholder="Enter your company name"/> 
+                                </div>
+                                <div class="mb-4"> 
+                                    <label for="email">Email *</label>                                     
+                                    <input type="email" class="form-control" id="email" placeholder="Enter your email" required/> 
+                                </div>
+                                <div class="mb-4"> 
+                                    <label for="telephone">Phone Number *</label>                                     
+                                    <input type="tel" class="form-control" id="telephone" placeholder="Enter your phone number" required/> 
+                                </div>
+                                <div class="mb-4"> 
+                                    <label for="message" class="form-label">Message *</label>                                     
+                                    <textarea class="form-control" id="message" rows="5" placeholder="What services are you inquiring about?" required></textarea> 
+                                </div>                                 
+                                <button type="submit" class="pd-btn pd-inverted"><span class="me-2"><svg class="pd-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368">
+                                            <path d="M260-420h440v-40H260v40Zm0-120h440v-40H260v40Zm0-120h440v-40H260v40Zm580 503.08L716.92-280h-532.3q-27.62 0-46.12-18.5Q120-317 120-344.62v-430.76q0-27.62 18.5-46.12Q157-840 184.62-840h590.76q27.62 0 46.12 18.5Q840-803 840-775.38v618.46ZM184.62-320H734l66 65.77v-521.15q0-9.24-7.69-16.93-7.69-7.69-16.93-7.69H184.62q-9.24 0-16.93 7.69-7.69 7.69-7.69 16.93v430.76q0 9.24 7.69 16.93 7.69 7.69 16.93 7.69ZM160-320v-480 480Z"/>
+                                        </svg></span>Submit
+                                </button>                                 
+                            </form>
+                        </div>                         
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-forms-4</p>
             </div>
         </section>
         <!-- Bootstrap core JavaScript
